// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTransaction for htlc refund 1`] = `
{
  "BINRepresentation": {
    "inputs": [
      Uint8Array [
        0,
        0,
        81,
        57,
        50,
        137,
        15,
        177,
        254,
        233,
        178,
        29,
        48,
        4,
        212,
        41,
        46,
        126,
        172,
        232,
        117,
        63,
        67,
        214,
        1,
        1,
        61,
        99,
        91,
        139,
        17,
        149,
        242,
        7,
        0,
        0,
        0,
        0,
      ],
      Uint8Array [
        0,
        0,
        175,
        59,
        95,
        173,
        32,
        246,
        249,
        126,
        178,
        16,
        147,
        78,
        148,
        33,
        118,
        247,
        247,
        208,
        247,
        4,
        35,
        89,
        6,
        89,
        238,
        14,
        2,
        23,
        5,
        58,
        124,
        171,
        0,
        0,
        0,
        0,
      ],
    ],
    "outputs": [
      Uint8Array [
        0,
        0,
        7,
        0,
        16,
        165,
        212,
        232,
        1,
        134,
        236,
        69,
        4,
        87,
        208,
        154,
        217,
        128,
        115,
        147,
        216,
        156,
        236,
        156,
        113,
        214,
        32,
        96,
        33,
      ],
      Uint8Array [
        0,
        0,
        7,
        0,
        215,
        72,
        204,
        224,
        1,
        134,
        236,
        69,
        4,
        87,
        208,
        154,
        217,
        128,
        115,
        147,
        216,
        156,
        236,
        156,
        113,
        214,
        32,
        96,
        33,
      ],
    ],
    "transactionsize": 345,
  },
  "HEXRepresentation_unsigned": "0100080000513932890fb1fee9b21d3004d4292e7eace8753f43d601013d635b8b1195f207000000000000af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab00000000080000070010a5d4e80186ec450457d09ad9807393d89cec9c71d620602100000700d748cce00186ec450457d09ad9807393d89cec9c71d6206021",
  "JSONRepresentation": {
    "fee": {
      "atoms": "34500000000",
      "decimal": "0.345",
    },
    "id": "63c90b6d244cdf901322fa7e75fb6499a8e7a30152d573626e5a10b06befe65a",
    "inputs": [
      {
        "input": {
          "index": 0,
          "input_type": "UTXO",
          "source_id": "513932890fb1fee9b21d3004d4292e7eace8753f43d601013d635b8b1195f207",
          "source_type": 0,
        },
        "utxo": {
          "htlc": {
            "refund_key": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
            "refund_timelock": {
              "content": 20,
              "type": "ForBlockCount",
            },
            "secret_hash": {
              "hex": "a94a8fe5ccb19ba61c4c0873d391e987982fbbd3",
              "string": null,
            },
            "spend_key": "tmt1q9mfg7d6ul2nt5yhmm7l7r6wwyqkd822rymr83uc",
          },
          "type": "Htlc",
          "value": {
            "amount": {
              "atoms": "1000000000000",
              "decimal": "10",
            },
            "type": "Coin",
          },
        },
      },
      {
        "input": {
          "index": 0,
          "input_type": "UTXO",
          "source_id": "af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab",
          "source_type": "Transaction",
        },
        "utxo": {
          "destination": "tmt1q9l0g4kd3s6x5rmesaznegz06pw9hxu6qvqu3pa7",
          "type": "Transfer",
          "value": {
            "amount": {
              "atoms": "1000000000000",
              "decimal": "10",
            },
            "type": "Coin",
          },
        },
      },
    ],
    "outputs": [
      {
        "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
        "type": "Transfer",
        "value": {
          "amount": {
            "atoms": "1000000000000",
            "decimal": "10",
          },
          "type": "Coin",
        },
      },
      {
        "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
        "type": "Transfer",
        "value": {
          "amount": {
            "atoms": "965500000000",
            "decimal": "9.655",
          },
          "type": "Coin",
        },
      },
    ],
  },
  "transaction_id": "63c90b6d244cdf901322fa7e75fb6499a8e7a30152d573626e5a10b06befe65a",
}
`;

exports[`buildTransaction for transfer - snapshot 2 1`] = `
{
  "BINRepresentation": {
    "inputs": [
      Uint8Array [
        0,
        0,
        175,
        59,
        95,
        173,
        32,
        246,
        249,
        126,
        178,
        16,
        147,
        78,
        148,
        33,
        118,
        247,
        247,
        208,
        247,
        4,
        35,
        89,
        6,
        89,
        238,
        14,
        2,
        23,
        5,
        58,
        124,
        171,
        0,
        0,
        0,
        0,
      ],
      Uint8Array [
        0,
        0,
        106,
        240,
        156,
        227,
        73,
        188,
        62,
        218,
        108,
        20,
        240,
        25,
        37,
        125,
        11,
        57,
        172,
        153,
        198,
        247,
        76,
        87,
        238,
        189,
        216,
        153,
        158,
        58,
        3,
        156,
        55,
        104,
        1,
        0,
        0,
        0,
      ],
    ],
    "outputs": [
      Uint8Array [
        10,
        0,
        7,
        0,
        16,
        165,
        212,
        232,
        169,
        74,
        143,
        229,
        204,
        177,
        155,
        166,
        28,
        76,
        8,
        115,
        211,
        145,
        233,
        135,
        152,
        47,
        187,
        211,
        1,
        118,
        148,
        121,
        186,
        231,
        213,
        53,
        208,
        151,
        222,
        253,
        255,
        15,
        78,
        113,
        1,
        102,
        157,
        74,
        25,
        2,
        80,
        1,
        134,
        236,
        69,
        4,
        87,
        208,
        154,
        217,
        128,
        115,
        147,
        216,
        156,
        236,
        156,
        113,
        214,
        32,
        96,
        33,
      ],
      Uint8Array [
        0,
        0,
        15,
        204,
        3,
        207,
        252,
        53,
        254,
        5,
        1,
        134,
        236,
        69,
        4,
        87,
        208,
        154,
        217,
        128,
        115,
        147,
        216,
        156,
        236,
        156,
        113,
        214,
        32,
        96,
        33,
      ],
    ],
    "transactionsize": 390,
  },
  "HEXRepresentation_unsigned": "0100080000af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab0000000000006af09ce349bc3eda6c14f019257d0b39ac99c6f74c57eebdd8999e3a039c376801000000080a00070010a5d4e8a94a8fe5ccb19ba61c4c0873d391e987982fbbd301769479bae7d535d097defdff0f4e7101669d4a1902500186ec450457d09ad9807393d89cec9c71d620602100000fcc03cffc35fe050186ec450457d09ad9807393d89cec9c71d6206021",
  "JSONRepresentation": {
    "fee": {
      "atoms": "139000000000",
      "decimal": "1.39",
    },
    "id": "e7df67c55b06aa147a3e024112f1a87dacf01bdf288d9dd5f8baa930a13137ab",
    "inputs": [
      {
        "input": {
          "index": 0,
          "input_type": "UTXO",
          "source_id": "af3b5fad20f6f97eb210934e942176f7f7d0f70423590659ee0e0217053a7cab",
          "source_type": "Transaction",
        },
        "utxo": {
          "destination": "tmt1q9l0g4kd3s6x5rmesaznegz06pw9hxu6qvqu3pa7",
          "type": "Transfer",
          "value": {
            "amount": {
              "atoms": "1000000000000",
              "decimal": "10",
            },
            "type": "Coin",
          },
        },
      },
      {
        "input": {
          "index": 1,
          "input_type": "UTXO",
          "source_id": "6af09ce349bc3eda6c14f019257d0b39ac99c6f74c57eebdd8999e3a039c3768",
          "source_type": "Transaction",
        },
        "utxo": {
          "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
          "type": "Transfer",
          "value": {
            "amount": {
              "atoms": "1687021711700428",
              "decimal": "16870.21711700428",
            },
            "type": "Coin",
          },
        },
      },
    ],
    "outputs": [
      {
        "htlc": {
          "refund_key": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
          "refund_timelock": {
            "content": 20,
            "type": "ForBlockCount",
          },
          "secret_hash": {
            "hex": "a94a8fe5ccb19ba61c4c0873d391e987982fbbd3",
            "string": null,
          },
          "spend_key": "tmt1q9mfg7d6ul2nt5yhmm7l7r6wwyqkd822rymr83uc",
        },
        "type": "Htlc",
        "value": {
          "amount": {
            "atoms": "1000000000000",
            "decimal": "10",
          },
          "type": "Coin",
        },
      },
      {
        "destination": "tmt1qxrwc3gy2lgf4kvqwwfa388vn3cavgrqyyrgswe6",
        "type": "Transfer",
        "value": {
          "amount": {
            "atoms": "1686882711700428",
            "decimal": "16868.82711700428",
          },
          "type": "Coin",
        },
      },
    ],
  },
  "transaction_id": "e7df67c55b06aa147a3e024112f1a87dacf01bdf288d9dd5f8baa930a13137ab",
}
`;
